<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newOrange_3"
    tools:context=".activities.MainActivity">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:lottie_rawRes="@raw/security_shield"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/chargerRemovalStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/_charger_removal_detection_status"
        app:layout_constraintEnd_toEndOf="@id/chargerDetection"
        app:layout_constraintStart_toStartOf="@id/chargerDetection"
        app:layout_constraintBottom_toTopOf="@id/chargerDetection"
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/chargerDetection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/_charger_detection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animationView"
       />
    <TextView
        android:id="@+id/motionDetectionStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/_motion_detection_status"
        app:layout_constraintEnd_toEndOf="@id/motionDetection"
        app:layout_constraintStart_toStartOf="@id/motionDetection"
        app:layout_constraintBottom_toTopOf="@id/motionDetection"
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/motionDetection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textSize="@dimen/_14ssp"
        android:text="@string/_motion_detection"
        app:layout_constraintTop_toBottomOf="@id/chargerDetection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/pocketRemovalStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/_pocket_removal_detection_status"
        app:layout_constraintEnd_toEndOf="@id/pocketRemoval"
        app:layout_constraintStart_toStartOf="@id/pocketRemoval"
        app:layout_constraintBottom_toTopOf="@id/pocketRemoval"/>
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/pocketRemoval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/_14ssp"
        android:text="@string/_pocket_removal"
        app:layout_constraintTop_toBottomOf="@id/motionDetection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_Dev"
        android:padding="@dimen/_10sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/gray_700"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>